[gd_scene load_steps=3 format=3 uid="uid://bc3rxdjct6p2n"]

[ext_resource type="Theme" uid="uid://dg85ex5qa0bpc" path="res://assets/themes/secondary_theme.tres" id="1_giwvk"]
[ext_resource type="Script" path="res://menus/settings/gameplay/gameplay_settings.gd" id="2_e6duu"]

[node name="GameplaySettings" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_giwvk")
follow_focus = true
script = ExtResource("2_e6duu")
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ScrollDirection" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollDirection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
text = "Scroll Direction"

[node name="ScrollDirectionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/ScrollDirection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="ScrollSpeed" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollSpeed"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollSpeed/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Scroll Speed"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ScrollSpeed/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 10

[node name="ScrollSpeedLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollSpeed/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "30"
horizontal_alignment = 2

[node name="ScrollSpeedHSlider" type="HSlider" parent="MarginContainer/VBoxContainer/ScrollSpeed"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 10.0
max_value = 60.0
value = 30.0

[node name="AudioOffset" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/AudioOffset"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
text = "Audio Offset (ms)"

[node name="AudioOffsetSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/AudioOffset"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -500.0
max_value = 500.0
value = 45.0
allow_greater = true
allow_lesser = true
alignment = 1
